// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test include-exclude-paths: exclude all but flip 1`] = `
"SNAPSHOT: exclude all but flip
# generated by patch-package 0.0.0 on 1980-01-01 00:00:00
#
# command:
#   npx patch-package lodash --exclude '^(?!.*flip)'
#
# declared package:
#   lodash: file:/mocked/path/to/lodash-4.17.4.tgz#78203a4d1c328ae1d86dca6460e369b57f4055ae
#
diff --git a/node_modules/lodash/flip.js b/node_modules/lodash/flip.js
index c28dd78..584b377 100644
--- a/node_modules/lodash/flip.js
+++ b/node_modules/lodash/flip.js
@@ -25,4 +25,4 @@ function flip(func) {
   return createWrap(func, WRAP_FLIP_FLAG);
 }
 
-module.exports = flip;
+module.patchPackage = flip;
END SNAPSHOT"
`;

exports[`Test include-exclude-paths: modified package.json 1`] = `
"SNAPSHOT: modified package.json
# generated by patch-package 0.0.0 on 1980-01-01 00:00:00
#
# command:
#   npx patch-package lodash --exclude '^$'
#
# declared package:
#   lodash: file:/mocked/path/to/lodash-4.17.4.tgz#78203a4d1c328ae1d86dca6460e369b57f4055ae
#
diff --git a/node_modules/lodash/package.json b/node_modules/lodash/package.json
index 028960d..7d346f3 100644
--- a/node_modules/lodash/package.json
+++ b/node_modules/lodash/package.json
@@ -1,7 +1,7 @@
 {
   \\"name\\": \\"lodash\\",
   \\"version\\": \\"4.17.4\\",
-  \\"description\\": \\"Lodash modular utilities.\\",
+  \\"patchPackageRulezLol\\": \\"Lodash modular utilities.\\",
   \\"keywords\\": \\"modules, stdlib, util\\",
   \\"homepage\\": \\"https://lodash.com/\\",
   \\"repository\\": \\"lodash/lodash\\",
END SNAPSHOT"
`;

exports[`Test include-exclude-paths: no base files 1`] = `
"SNAPSHOT: no base files
# generated by patch-package 0.0.0 on 1980-01-01 00:00:00
#
# command:
#   npx patch-package lodash --exclude base
#
# declared package:
#   lodash: file:/mocked/path/to/lodash-4.17.4.tgz#78203a4d1c328ae1d86dca6460e369b57f4055ae
#
diff --git a/node_modules/lodash/flip.js b/node_modules/lodash/flip.js
index c28dd78..584b377 100644
--- a/node_modules/lodash/flip.js
+++ b/node_modules/lodash/flip.js
@@ -25,4 +25,4 @@ function flip(func) {
   return createWrap(func, WRAP_FLIP_FLAG);
 }
 
-module.exports = flip;
+module.patchPackage = flip;
diff --git a/node_modules/lodash/fp/__.js b/node_modules/lodash/fp/__.js
deleted file mode 100644
index 4af98de..0000000
--- a/node_modules/lodash/fp/__.js
+++ /dev/null
@@ -1 +0,0 @@
-module.exports = require('./placeholder');
diff --git a/node_modules/lodash/newFile.md b/node_modules/lodash/newFile.md
new file mode 100644
index 0000000..3b2aed8
--- /dev/null
+++ b/node_modules/lodash/newFile.md
@@ -0,0 +1 @@
+this is a new file
END SNAPSHOT"
`;

exports[`Test include-exclude-paths: only __.js being deleted 1`] = `
"SNAPSHOT: only __.js being deleted
# generated by patch-package 0.0.0 on 1980-01-01 00:00:00
#
# command:
#   npx patch-package lodash --include __
#
# declared package:
#   lodash: file:/mocked/path/to/lodash-4.17.4.tgz#78203a4d1c328ae1d86dca6460e369b57f4055ae
#
diff --git a/node_modules/lodash/fp/__.js b/node_modules/lodash/fp/__.js
deleted file mode 100644
index 4af98de..0000000
--- a/node_modules/lodash/fp/__.js
+++ /dev/null
@@ -1 +0,0 @@
-module.exports = require('./placeholder');
END SNAPSHOT"
`;

exports[`Test include-exclude-paths: only base files, no clone files 1`] = `
"SNAPSHOT: only base files, no clone files
# generated by patch-package 0.0.0 on 1980-01-01 00:00:00
#
# command:
#   npx patch-package lodash --include base --exclude clone
#
# declared package:
#   lodash: file:/mocked/path/to/lodash-4.17.4.tgz#78203a4d1c328ae1d86dca6460e369b57f4055ae
#
diff --git a/node_modules/lodash/_baseClamp.js b/node_modules/lodash/_baseClamp.js
index a1c5692..c52e38e 100644
--- a/node_modules/lodash/_baseClamp.js
+++ b/node_modules/lodash/_baseClamp.js
@@ -19,4 +19,4 @@ function baseClamp(number, lower, upper) {
   return number;
 }
 
-module.exports = baseClamp;
+module.patchPackage = baseClamp;
END SNAPSHOT"
`;
